# icn-v1

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: ci-lint.yml  ci-smoke.yml  ci.yml  deploy-pages.yml
config/governance/: governance_models.yml  proposal_types.yml
contracts/asyncapi/: icn-events.yaml
contracts/json/: resource_exchange_proposed.schema.json
contracts/openapi/: head.yaml
database/migrations/: 001_initial_schema.sql
docs/: CURSOR_PROMPTS.md  PLAN.md  contribution-workflow.md  deployment.md  governance-process.md  implementation-guide.md  poc-objectives.md  security-checklist.md
docs/api/: asyncapi.yaml  openapi.yaml
docs/architecture/: federation-model.md
docs/database/: schema.md
docs/specs/: foundational-spec-v1.0.md
infra/: docker-compose.dev.yml  secrets.example.env
infra/docker/: docker-compose.dev.yml  init-db.sql
infra/scripts/: setup-dev.sh
infrastructure/docker/: docker-compose.dev.yml
scripts/: ci-smoke.sh  seed-dev-data.sql  setup-dev-environment.sh
services/api-gateway/: Dockerfile  README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json
services/discovery/: Dockerfile  README.md  package.json
services/event-store/: Cargo.toml  Dockerfile  README.md
services/event-store/src/: main.rs
services/governance-engine/: Dockerfile  README.md  main.py  requirements-dev.txt  requirements.txt
site/: CNAME  index.html  styles.css
web-frontend/: index.html  package.json
(+41 files in other folders)
